<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/description_post_author_avatar"
        android:src="@drawable/post_avatar_drawable"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/menu_button_description"
        app:icon="@drawable/baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="video_link" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_likes"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:checkable="true"
        android:contentDescription="@drawable/ic_likent_24"
        app:icon="@drawable/like_selector"
        app:layout_constraintTop_toBottomOf="@id/barrier_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_share"
        style="@style/Widget.AppTheme.ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:contentDescription="@string/share_button_description"
        app:icon="@drawable/share_button"
        app:layout_constraintStart_toEndOf="@+id/button_likes"
        app:layout_constraintTop_toBottomOf="@id/barrier_content" />

    <TextView
        android:id="@+id/views_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_views"
        app:layout_constraintEnd_toStartOf="@+id/button_views"
        app:layout_constraintTop_toBottomOf="@id/barrier_content"
        tools:text="@sample/posts.json/data/views_post" />

    <ImageButton
        android:id="@+id/button_views"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/views_button_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_content"
        app:srcCompat="@drawable/baseline_visibility_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="26dp" />

    <TextView
        android:id="@+id/video_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:autoLink="web"
        android:text="@string/videourl"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/video_pic"
        app:layout_constraintTop_toBottomOf="@id/video_pic" />

    <ImageView
        android:id="@+id/video_pic"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:src="@drawable/video"
        android:visibility="gone"
        android:contentDescription = "@string/preview_video"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <View
        android:id="@+id/shadow_strip"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/button_likes" />


</androidx.constraintlayout.widget.ConstraintLayout>